--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -29,7 +29,7 @@
                             value="<% if (editing) { %><%= product.price %><% } %>" />
                     </div>
                     <%if (editing) { %>
-                        <input type="hidden" name="productId" value="<%= product.id %>">
+                        <input type="hidden" name="productId" value="<%= product._id %>">
                         <% } %>
                             <button type="submit">
                                 <% if (editing) { %>
