--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -25,9 +25,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/<%= product.id%>" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product._id%>" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="post">
-                                        <input type="hidden" name="productId" value="<%= product.id %>" />
+                                        <input type="hidden" name="productId" value="<%= product._id %>" />
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
                                 </div>
