--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -12,10 +12,10 @@
                                 <h1>
                                     <%= product.title %>
                                 </h1>
-                                <h2>Quantity: <%= product.cartItem.quantity %>
+                                <h2>Quantity: <%= product.quantity %>
                                 </h2>
                                 <form action="/cart-delete-item" method="post">
-                                    <input type="hidden" name="productId" value="<%= product.id %>">
+                                    <input type="hidden" name="productId" value="<%= product._id %>">
                                     <button type="submit" class="btn danger">Delete</button>
                                 </form>
                             </li>
