--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,19 +1,20 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/orders.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
             <main>
                 <% if (orders.length> 0) { %>
-                    <ul>
+                    <ul class="orders">
                         <% orders.forEach((order)=> { %>
-                            <li>
-                                <h1># <%= order.id %>
+                            <li class="orders__item">
+                                <h1># <%= order._id %>
                                 </h1>
-                                <ul>
-                                    <% order.products.forEach(product=> { %>
-                                        <li>
-                                            <%= product.title %> (<%= product.orderItem.quantity %>)
+                                <ul class="orders__products">
+                                    <% order.items.forEach(product=> { %>
+                                        <li class="orders__products-item">
+                                            <%= product.title %> (<%= product.quantity %>)
                                         </li>
                                         <% }) %>
                                 </ul>
