--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,8 +37,11 @@ main {
 }
 
 .main-header__nav {
-    height: 100%;
+    width: 100%;
     display: none;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
