--- a/views/auth/email-verification.ejs
+++ b/views/auth/email-verification.ejs
@@ -10,20 +10,13 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="product-form" method="post" action="/login">
+                        <form class="product-form" method="post" action="/verify-email">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="email">Email Address</label>
                                 <input type="email" name="email" id="email" />
                             </div>
-                            <div class="form-control">
-                                <label for="password">Password</label>
-                                <input type="password" name="password" id="password" />
-                            </div>
-                            <button type="submit">Login</button>
+                            <button type="submit">Verify Email</button>
                         </form>
-                        <div class="centered">
-                            <a href="/reset-password">Reset Password</a>
-                        </div>
             </main>
             <%- include('../includes/end.ejs') %>
