--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -6,39 +6,44 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
             <main>
-                <form class="product-form" method="post"
-                    action="<% if (editing) { %>/admin/edit-product<% } else { %>/admin/add-product<% } %>">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <div class="form-control">
-                        <label for="title">Title</label>
-                        <input type="text" name="title" id="title"
-                            value="<% if (editing) { %><%= product.title %><% } %>" />
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error">
+                        <%= errorMessage %>
                     </div>
-                    <div class="form-control">
-                        <label for="imageUrl">Image URL</label>
-                        <input type="text" name="imageUrl" id="imageUrl"
-                            value="<% if (editing) { %><%= product.imageUrl %><% } %>" />
-                    </div>
-                    <div class="form-control">
-                        <label for="description">Description</label>
-                        <textarea name="description" id="description"
-                            rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
-                    </div>
-                    <div class="form-control">
-                        <label for="price">Price</label>
-                        <input type="number" name="price" id="price"
-                            value="<% if (editing) { %><%= product.price %><% } %>" />
-                    </div>
-                    <%if (editing) { %>
-                        <input type="hidden" name="productId" value="<%= product._id %>">
-                        <% } %>
-                            <button type="submit">
-                                <% if (editing) { %>
-                                    Update Product
-                                    <% } else { %>
-                                        Add Product
-                                        <% } %>
-                            </button>
-                </form>
+                    <% } %>
+                        <form class="product-form" method="post" novalidate
+                            action="<% if (editing) { %>/admin/edit-product<% } else { %>/admin/add-product<% } %>">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <div class="form-control">
+                                <label for="title">Title</label>
+                                <input type="text" name="title" id="title"
+                                    value="<% if (editing || hasError) { %><%= product.title %><% } %>" />
+                            </div>
+                            <div class="form-control">
+                                <label for="imageUrl">Image URL</label>
+                                <input type="text" name="imageUrl" id="imageUrl"
+                                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>" />
+                            </div>
+                            <div class="form-control">
+                                <label for="description">Description</label>
+                                <textarea name="description" id="description"
+                                    rows="5"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
+                            </div>
+                            <div class="form-control">
+                                <label for="price">Price</label>
+                                <input type="number" name="price" id="price"
+                                    value="<% if (editing || hasError) { %><%= product.price %><% } %>" />
+                            </div>
+                            <%if (editing) { %>
+                                <input type="hidden" name="productId" value="<%= product._id %>">
+                                <% } %>
+                                    <button type="submit">
+                                        <% if (editing) { %>
+                                            Update Product
+                                            <% } else { %>
+                                                Add Product
+                                                <% } %>
+                                    </button>
+                        </form>
             </main>
             <%- include('../includes/end.ejs') %>
