--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,19 +10,23 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="product-form" method="post" action="/signup">
+                        <form class="product-form" method="post" action="/signup" novalidate>
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="email">Email Address</label>
-                                <input type="email" name="email" id="email" />
+                                <input class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                                    type="email" name="email" id="email" value="<%= oldInput.email %>" />
                             </div>
                             <div class="form-control">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password" />
+                                <input class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                                    type="password" name="password" id="password" value="<%= oldInput.password %>" />
                             </div>
                             <div class="form-control">
                                 <label for="confirmPassword">Confirm Password</label>
-                                <input type="password" name="confirmPassword" id="confirmPassword" />
+                                <input class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"
+                                    type="password" name="confirmPassword" id="confirmPassword"
+                                    value="<%= oldInput.confirmPassword %>" />
                             </div>
                             <button type="submit">Signup</button>
                         </form>
