Added file picker for product image and added invoice PDF generation functionality for the orders

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -44,6 +44,6 @@ button:active {
     background-color: #6200ff;
 }
 
-.form-control input.invalid {
+.form-control input.invalid, .form-control textarea.invalid {
     border-color: red
 }
