--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -9,7 +9,7 @@
                 </h1>
                 <hr>
                 <div>
-                    <img class="image" src="<%= product.imageUrl %>" alt="<%= product.title %>" />
+                    <img class="image" src="/<%= product.imageUrl %>" alt="<%= product.title %>" />
                 </div>
                 <h2>
                     $<%= product.price %>
