--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,6 +249,24 @@ main {
     font-weight: bold;
 }
 
+.pagination {
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.pagination a {
+    text-decoration: none;
+    color: #00695c;
+    padding: 0.5rem;
+    border: 1px solid #00695c;
+    margin: 0 1rem;
+}
+
+.pagination a:hover {
+    color: #fff;
+    background-color: #00695c;
+}
+
 @media (min-width: 768px) {
     .main-header__nav {
         display: flex;
@@ -259,6 +277,7 @@ main {
     #side-menu-toggle {
         display: none;
     }
+
     .user-message {
         width: 30rem;
     }
