--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -11,27 +11,30 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="product-form" method="post" novalidate
+                        <form enctype="multipart/form-data" class="product-form" method="post" novalidate
                             action="<% if (editing) { %>/admin/edit-product<% } else { %>/admin/add-product<% } %>">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="title">Title</label>
-                                <input type="text" name="title" id="title"
+                                <input class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : '' %>"
+                                    type="text" name="title" id="title"
                                     value="<% if (editing || hasError) { %><%= product.title %><% } %>" />
                             </div>
                             <div class="form-control">
-                                <label for="imageUrl">Image URL</label>
-                                <input type="text" name="imageUrl" id="imageUrl"
-                                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>" />
+                                <label for="image">Image</label>
+                                <input type="file" name="image" id="image" />
                             </div>
                             <div class="form-control">
                                 <label for="description">Description</label>
-                                <textarea name="description" id="description"
+                                <textarea
+                                    class="<%= validationErrors.find(e => e.param === 'description') ? 'invalid' : '' %>"
+                                    name="description" id="description"
                                     rows="5"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
                             </div>
                             <div class="form-control">
                                 <label for="price">Price</label>
-                                <input type="number" name="price" id="price"
+                                <input class="<%= validationErrors.find(e => e.param === 'price') ? 'invalid' : '' %>"
+                                    type="number" name="price" id="price"
                                     value="<% if (editing || hasError) { %><%= product.price %><% } %>" />
                             </div>
                             <%if (editing) { %>
