--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-<link rel="stylesheet" href="/css/orders.css">
+    <link rel="stylesheet" href="/css/orders.css">
     </head>
 
     <body>
@@ -9,7 +9,7 @@
                     <ul class="orders">
                         <% orders.forEach((order)=> { %>
                             <li class="orders__item">
-                                <h1># <%= order._id %>
+                                <h1># <%= order._id %> - <a href="/orders/<%= order._id %>">Invoice</a>
                                 </h1>
                                 <ul class="orders__products">
                                     <% order.items.forEach(product=> { %>
