Added pagination functionality and added REST API for Delete Product with DOM manipulation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -262,7 +262,9 @@ main {
     margin: 0 1rem;
 }
 
-.pagination a:hover {
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
     color: #fff;
     background-color: #00695c;
 }
