--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -26,11 +26,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id%>" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="post">
-                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                        <input type="hidden" name="productId" value="<%= product._id %>" />
-                                        <button type="submit" class="btn">Delete</button>
-                                    </form>
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                    <input type="hidden" name="productId" value="<%= product._id %>" />
+                                    <button onclick="deleteProduct(this)" type="button" class="btn">Delete</button>
                                 </div>
                             </article>
                             <% } %>
@@ -39,4 +37,5 @@
                         <h1>No Products Found</h1>
                         <% } %>
             </main>
+            <script src="/js/admin.js"></script>
             <%- include('../includes/end.ejs') %>
