--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -25,13 +25,17 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <a href="/products/<%= product._id %>" class="btn">Details</a>
+                                    <% if (isLoggedIn) { %>
+                                        <%- include('../includes/add-to-cart.ejs', { product: product }) %>
+                                            <% } %>
                                 </div>
                             </article>
                             <% } %>
                     </div>
+                    <%- include('../includes/pagination.ejs') %>
                     <% } else { %>
                         <h1>No Products Found</h1>
-                        <% } %>
+                    <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
